グループ機能実装
・cardsテーブルのbelonging_group_idは排除。代わりに参照外部キーのgroup_idを使用
・ユーザ登録時はグループ登録は必須ではないため、optional true設定
・名刺登録時も検索を行い、重複しているか確認する
・検索を行うとき、グループとしての名刺か、個人登録したものとしての名刺かを区別するよう設定
・すべてのビューを再調整
・flashメッセージ挿入
・apiキーのsecrets.yml.enc化

--- a/app/assets/stylesheets/config/_linkConfig.scss
+++ b/app/assets/stylesheets/config/_linkConfig.scss
@@ -8,3 +8,15 @@
   color: $mainBlue;
 }
 
+.linkWhitebtn{
+  display:inline;
+  border-radius: 5px;
+  border:1px solid $mainWhite;
+  color:$mainWhite;
+  padding:3px;
+  text-align:center;
+  &:hover{
+    border:1px solid $btnOrange;
+    color:$btnOrange;
+  }
+}
