--- a/app/assets/stylesheets/config/_variable.scss
+++ b/app/assets/stylesheets/config/_variable.scss
@@ -7,6 +7,8 @@ $btnOrange:orange;
 $btnGreen:green;
 $btnLightGreen:lightgreen;
 $btnBlue:blue;
+$btnRed:red;
 
 $backGray:#888888;
 $backLightGray:#cccccc;
+$backOrange:orange
