--- a/app/assets/stylesheets/modules/_card_top.scss
+++ b/app/assets/stylesheets/modules/_card_top.scss
@@ -32,6 +32,9 @@
         color:$btnLightGreen;
         margin-left:10px;
       }
+      &--groupnew{
+        color:$btnRed;
+      }
     }
     &__row{
       display:flex;
