--- a/app/assets/stylesheets/modules/_episode_show.scss
+++ b/app/assets/stylesheets/modules/_episode_show.scss
@@ -45,7 +45,8 @@
       
     }
     #episode_inner__startedit,
-    #episode_inner__rebertedit{
+    #episode_inner__rebertedit,
+    #episode_inner__backcardshowbtn{
       display:block;
       width:100px;
       font-size:0.8em;
