--- a/app/assets/stylesheets/modules/_card_newcamerasearchcamera.scss
+++ b/app/assets/stylesheets/modules/_card_newcamerasearchcamera.scss
@@ -28,7 +28,6 @@
 }
 .drawCanvas{
   &__after{
-    display:none;
     &--red{
       color:$mainEmRed;
       font-weight:bold;
@@ -44,11 +43,11 @@
         background-color:$mainWhite;
       }
       &--label{
-        display:block;
+        // display:block;
         width:400px;
       }
       &--input{
-        display:block;
+        // display:block;
       }
       input[type="text"]{
         width:100%;
@@ -57,6 +56,35 @@
         width:50%;
         height:20px;
         font-size: 1.5em;
+      }
+    }
+    &__createbeforesearchresults{
+      border:3px solid black;
+      padding:10px;
+      // display:none;
+      &--confbtn{
+        display:inline-block;
+        border-radius: 5px;
+        border:1px solid $mainBlue;
+        color:$mainBlue;
+        padding:3px;
+        text-align:center;
+        &:hover{
+          border:1px solid $btnOrange;
+          color:$btnOrange;
+        }
+      }
+      &--reloadbtn{
+        display:inline;
+        border-radius: 5px;
+        border:1px solid $btnRed;
+        color:black;
+        padding:3px;
+        text-align:center;
+        &:hover{
+          border:1px solid black;
+          color:$btnRed;
+        }
       }
     }
   }
@@ -97,11 +125,14 @@
     }
   }
 }
-#video_area_btn,#drawCanvas,#drawCanvas__after__form--submitbtn{
-  animation: color-change 3s linear infinite;
-}
+// #video_area_btn,#drawCanvas,#drawCanvas__after__form--submitbtn{
+//   animation: color-change 3s linear infinite;
+// }
 #drawCanvas__after__form--submitbtn{
   margin :0 100px;
+}
+.animationEmRed{
+  animation: color-change 3s linear infinite;
 }
 @keyframes color-change {
   0%,100%{
@@ -112,4 +143,19 @@
     color:red;
   }
   
+}
+
+.newcamera{
+  &__step2{
+    display:none;
+  }
+  &__step3{
+    display:none;
+    &__warning{
+      display:none;
+    }
+  }
+  &__step4{
+    display:none;
+  }
 }
