--- a/app/views/cards/show.html.haml
+++ b/app/views/cards/show.html.haml
@@ -1,4 +1,5 @@
 = render 'partial/header'
+= render 'layouts/notifications'
 .showcard_outer
   .showcard_left
     名刺の内容
@@ -22,10 +23,11 @@
         =f.label :メールアドレス,class:"showcard_left__cardform__row--label"
         =f.text_field :email,class:"showcard_left__cardform__row--input",value:@card.email
       .showcard_left__cardform__btns
-        =f.submit "名刺データを更新",id:"card__updatebtn",class:"showcard_left__cardform--submitbtn"
-        #card__startedit この名刺を編集したい
-        #card__rebertedit 編集を適用せず、戻る
-        = link_to 'この名刺を削除する', card_path(@card.id), method: :delete, data: { confirm: '本当にこの名刺を削除しますか？' },id:"card__destroybtn"
+        -if current_user.id == @card.user_id
+          =f.submit "名刺データを更新",id:"card__updatebtn",class:"showcard_left__cardform--submitbtn"
+          #card__startedit この名刺を編集したい
+          #card__rebertedit 編集を適用せず、戻る
+          = link_to 'この名刺を削除する', card_path(@card.id), method: :delete, data: { confirm: '本当にこの名刺を削除しますか？' },id:"card__destroybtn"
     
     %hr
     %p 下の欄に記入して、この人との「エピソード」を新たに作成します
@@ -63,6 +65,6 @@
                 = link_to '詳細', "/cards/#{@card.id}/episodes/#{episode.id}", method: :get
               - if user_signed_in? && current_user.id == episode.card.user.id
                 %li
-                  = link_to '削除', card_episode_path(episode.id), method: :delete, data: { confirm: '本当にこのエピソードを削除しますか？' }
+                  = link_to '削除', card_episode_path(@card.id,episode.id), method: :delete, data: { confirm: '本当にこのエピソードを削除しますか？' }
         %hr
 = render 'partial/footer'
