js デバイスのバックカメラを使用するように変更
https://nijibox.jp/blog/browsercamera/
を参考にしています。
ローカル環境では確かめられないので、デプロイで確かめます。

--- a/app/views/cards/newcamera.html.erb
+++ b/app/views/cards/newcamera.html.erb
@@ -80,7 +80,10 @@
 
       // スタートボタン押下まちでなく、このページが開かれたら(そしてDOMの読み込みが完了したら)カメラが起動します。
       document.addEventListener('DOMContentLoaded', () => {
-          navigator.mediaDevices.getUserMedia({ video: true, audio: false })
+          navigator.mediaDevices.getUserMedia({ video: {
+            // スマホのバックカメラを使用
+            facingMode: 'environment'
+        }, audio: false })
           .then(stream => $video.srcObject = stream)
           .catch(err => alert(`${err.name} ${err.message}`));
       }, false);
