--- a/app/views/cards/searchcamera.html.erb
+++ b/app/views/cards/searchcamera.html.erb
@@ -98,7 +98,10 @@
     const $video = document.getElementById('video_area');  // 映像表示エリア
 
     document.addEventListener('DOMContentLoaded', () => {
-        navigator.mediaDevices.getUserMedia({ video: true, audio: false })
+        navigator.mediaDevices.getUserMedia({ video: {
+            // スマホのバックカメラを使用
+            facingMode: 'environment'
+        }, audio: false })
         .then(stream => $video.srcObject = stream)
         .catch(err => alert(`${err.name} ${err.message}`));
     }, false);
