ビューで特定のjsだけ読み込めるようにする(実験用)
https://qiita.com/Oakbow/items/2e712e05bb4bbf68faf5
の内容を使用します。
1 application.jsのrequire_treeを消します
2 今のところはdevelopment.rbにconfig.assets.precompile += ['*.js']
を使用して、全jsをアセットパイプラインの対象にしてアプリで使えるようにします。

3-0.ビューで= javascript_include_tag を使い読むjsファイルを指定します。
ただし

3-1. application.html.hamlでは
= javascript_include_tag *Dir[Rails.root.join("**/javascripts/commonjs/*.js")]
としてcommonjsに入ってる全jsは共通で読み込む
3-2. top.html.hamlでは(=特定のビューでは)末尾に
= javascript_include_tag 'specificjs/testscript2'
としてspecificjsディレクトリにあるjsファイル名を指定する
3-3. application.jsとcable.jsはcommonjsディレクトリや、specificjsディレクトリに入れてはいけない。

以上で可能です。

--- a/app/views/cards/top.html.haml
+++ b/app/views/cards/top.html.haml
@@ -10,3 +10,4 @@
     %hr
     = link_to 'グループへの参加/グループの新規登録をする/参加・作成しているグループについて編集する',new_group_path, method: :get,class: 'topbody__btn--groupnew topbody__btn'
 = render 'partial/footer'
+= javascript_include_tag 'specificjs/testscript2'
