本番環境 特定のビューでjsで決まったjsを読み込む 2
前回のコミットではconfig/initializer/assets.rbに全jsを組み込むことをいれたが改善せず。
application.html.hamlでのjsの読み込み位置を変更します。

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,3 +13,4 @@
     -# ビューごとに特定のjsだけ読みたいなら、specificjsディレクトリに入れ、ビューごとに、javascript_include_tagで読み込んでください。
   %body
     = yield
+    = javascript_include_tag *Dir[Rails.root.join("**/javascripts/commonjs/*.js")]
