Revert "ビューで特定のjsだけ読み込めるようにする(実験用)"
This reverts commit cf1590aa574ec12a6eb5c88cb0368d5c0a3c7f7c.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,8 +7,6 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
-    = javascript_include_tag *Dir[Rails.root.join("**/javascripts/commonjs/*.js")]
-    -# 上の記述で、「javascripts/commonjs」なディレクトリ内の、すべてのjsファイルを読み取り、全ビューでscrpitタグとして読み込みます。
-    -# ただし、application.jsとcable.jsはcommonjsディレクトリに入れないでください。
+    = javascript_include_tag 'application'
   %body
     = yield
